<resources>
    <string name="btn_create_order">Place an Order</string>
    <string name="btn_prev_orders">View Previous Orders</string>
    <string name="app_name">Pizza Time</string>
    <string name="price_txt">Price: $%d</string>
    <string name="txt_small">10cm: $6</string>
    <string name="txt_medium">12cm: $8</string>
    <string name="txt_large">14cm: $10</string>
    <string name="txt_size">Size</string>
    <string name="toppings">Toppings - $2 Each</string>
    <string name="pizzaNoToppings">%s Cheese Pizza</string>
    <string name="pizzaOneTopping">%s %s Pizza</string>
    <string name="pizzaManyTopping">%s %s, and %s Pizza</string>
    <string name="btn_add_to_order">Add to Order</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>